--- a/micro-posts/Use of Pickle/index.html
+++ b/micro-posts/Use of Pickle/index.html
@@ -115,6 +115,14 @@
 
 
 	<body>
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
 
 	<div id="fh5co-page">
 
@@ -399,6 +407,7 @@
 </div>
 
 <br>
+	<div class="fb-comments" data-href="http://jay-chakalasiya/micro-posts/Use%20of%20Pickle/index.html" data-width="700" data-numposts="5"></div>
 
 
 		<div class="fh5co-footer-style-3">
