--- a/micro-posts/Use of Pickle/index.html
+++ b/micro-posts/Use of Pickle/index.html
@@ -400,7 +400,7 @@
 
 <br>
 	
-	<div id="disqus_thread" style="margin-left:200px;margin-right:200px"></div>
+	<div id="disqus_thread" style="margin-left:200px;margin-right:200px;"></div>
 	<script>
 
 	/**
