--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-6 col-md-offset-3 text-center">
-						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Some of My Work</h2>
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">A fine guide to process we had used in project, the all projects are available on github repos, so feel free to add comments and write suggestions.
+						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Projects</h2>
+						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">A fine guide to process used in project, the all projects are available on github repos, so feel free to add comments and write suggestions.
 																							<br><br><br>If you are new to this technologies then please first go through Tiny Tales</p>
 						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#micro-posts" class="btn btn-success btn-lg">Way to Micro-Posts</a></p>
 					</div>
@@ -154,7 +154,7 @@
 				<ul>
 
 					<li class="wow fadeInUp" style="background-image:url(images/full_4.jpg);" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
-						<a href="projects/Financial Market Forecasting/index.html">
+						<a href="projects/Image Classification/index.html">
 
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -192,7 +192,7 @@
 					<br>
 
 					<li class="wow fadeInUp" style="background-image: url(images/full_2.jpg);" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
-						<a href="projects/Hand Written Character Recognition/index.html">
+						<a href="projects/Catagorization of news clippings/index.html">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
@@ -230,7 +230,7 @@
 					<br>
 
 					<li class="wow fadeInUp" style="background-image: url(images/full_1.jpg);" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
-						<a href="#">
+						<a href="projects/Financial Market Forecastng/index.html">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
@@ -269,7 +269,7 @@
 					<br>
 
 					<li class="wow fadeInUp" style="background-image: url(images/full_4.jpg);" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
-						<a href="projects/Image Classification/index.html">
+						<a href="projects/Hand Written Character Recognition/index.html">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
