--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	
 
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Monsterrat:400,700|Merriweather:400,300italic,700' rel='stylesheet' type='text/css'>
@@ -67,6 +67,8 @@
 	<link href="css/main.css" rel="stylesheet">
 	<link id="css-preset" href="css/presets/preset1.css" rel="stylesheet">
 	<link href="css/responsive.css" rel="stylesheet">
+	
+	<link rel="shortcut icon" href="favicon.ico">
 	</head>
 
 
@@ -128,7 +130,7 @@
 								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="font-size:30px;">by Jay Chakalasiya</h1>
 								<br>
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">Making World a Better Place</h2>
-								<p><a href="http://jay-chakalasiya.github.io" class="btn btn-success btn-sm btn-outline">My Contributions</a></p>
+								<p><a href="http://github.com/jay-chakalasiya" class="btn btn-success btn-sm btn-outline">My Contributions</a></p>
 							</div>
 						</div>
 					</div>
