--- a/micro-posts/Use of Pickle/index.html
+++ b/micro-posts/Use of Pickle/index.html
@@ -172,7 +172,7 @@
 
 
 
-<div class="OwnContent">
+<div class="container">
 	<br>
 	<p style="font-size:15px">Storing and retrieving is a crucial task to avoid re-processing for same data again. Mostly we can found data in .csv format so you might fimiliar with <strong><a href="../Introduction to Pandas/index.html">pandas</a></strong>. </p>
 	
@@ -277,7 +277,7 @@
   </div>
 
 
-<div class="OwnContent">
+<div class="container">
 	<br>
 	<p style="font-size:15px">
 	Can you see that "None". That's the problem and a huge problem while working with oddly distributed data. It consumes so much memory as well as add read, write overhead.
@@ -310,7 +310,7 @@
 	</div>
 	</div>
 	
-<div class="OwnContent">
+<div class="container">
 	<p style="font-size:15px">'wb' : stands for Write Binary<br>Now you can see a file named "<i>test</i>" in the same folder of your program file.
 	
 	
@@ -320,17 +320,6 @@
 	
 	<div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
-
-
-
-
-
-
-
-
-
-
-
 
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
@@ -381,7 +370,7 @@
 
 </div>
 
-<div class="OwnContent">
+<div class="container">
 	<p style="font-size:15px">'rb' : stands for read Binary<br>We had retrived our actual data in same form as before.<br><br>For the user of python 2.x.x use cPickle instead of pickle it is almost 1000 faster. Python 3.x.x already imports faster version if available.</p>
 
 	<br>
