--- a/micro-posts/Installing Tensorflow/index.html
+++ b/micro-posts/Installing Tensorflow/index.html
@@ -153,7 +153,7 @@
 				</div>
 			</div>
 		</nav>
-		<div class="fh5co-cover fh5co-cover-style-2" data-stellar-background-ratio="0.7" data-next="yes"  style="min-height:370px;background-image:url(image.header.jpg);background-size: 100% 40%;"><!--400 x 85 in corel -->
+		<div class="fh5co-cover fh5co-cover-style-2" data-stellar-background-ratio="0.7" data-next="yes"  style="min-height:370px;background-image:url(image.header.jpg);"><!--background-size: 100% 40%;"><!--400 x 85 in corel -->
 			<div class="fh5co-overlay"></div>
 			<div class="fh5co-cover-text">
 
