--- a/micro-posts/Installing Tensorflow/index.html
+++ b/micro-posts/Installing Tensorflow/index.html
@@ -174,8 +174,8 @@
 
 <div class="container">
 	<br>
-	<p style="font-size:15px">Storing and retrieving is a crucial task to avoid re-processing for same data again. Mostly we can found data in .csv format so you might fimiliar with <strong><a href="../Introduction to Pandas/index.html">pandas</a></strong>. </p>
-	
+	<p style="font-size:15px">Tensor-flow is very powerful library for Machine Learning and a best one to train Neural Networks. Few years before people were using Keras or theano as Deep learning frameworks. But in 2015 when Goggle had made Tensor-Flow open, Everything had changed, it's just few years ago so you are not so late, Go on install it and start using Most powerful framework for Deep Learning.</p>
+	<br>
 	<p style="font-size:19px;color:black;">Problems with Pandas</p>
 	<p style="font-size:15px">You have two statements, each with diffrent number of words, represented as below.
 	
