--- a/projects/Image Classification/index.html
+++ b/projects/Image Classification/index.html
@@ -4,12 +4,12 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Flying Pages - Micro-posts - Use of Pickle</title>
+	<title>Flying Pages - Projects - Image Classification</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="A Personal Project Site by Jay Chakalasiya" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
+	<meta name="keywords" content="html5, bootstrap, css3, mobile first, responsive" />
 	<meta name="author" content="Jay Chakalasiya" />
-	<meta name="website" content="jaychakalasiya.com"
+	<meta name="website" content="jaychakalasiya.com"/>
 
   <!--
 	/////////////////////////////////////////////////////
@@ -82,23 +82,6 @@
 	<link id="css-preset" href="../../css/presets/preset1.css" rel="stylesheet">
 	<link href="../../css/responsive.css" rel="stylesheet">
 	<link href="../../css/myOwnContent.css" rel="stylesheet">
-  <!--
-  <link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/cards.css">
-	<script src="js/modernizr-2.6.2.min.js"></script>
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/animate.min.css" rel="stylesheet">
-	<link href="css/font-awesome.min.css" rel="stylesheet">
-	<link href="css/lightbox.css" rel="stylesheet">
-	<link href="css/main.css" rel="stylesheet">
-	<link id="css-preset" href="css/presets/preset1.css" rel="stylesheet">
-	<link href="css/responsive.css" rel="stylesheet">
--->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -136,14 +119,7 @@
 							</ul>
 						</div>
 					</div>
-					<!--
-
-					<ul data-offcanvass="yes">
-						<li class="active"><a href="#">Tour</a></li>
-						<li class="scroll"><a href="#projects">Projects</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Pricing</a></li>
-					</ul>-->
+					
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-4 text-right fh5co-link-wrap">
 					<ul class="fh5co-special" data-offcanvass="yes">
@@ -153,7 +129,7 @@
 				</div>
 			</div>
 		</nav>
-		<div class="fh5co-cover fh5co-cover-style-2" data-stellar-background-ratio="0.7" data-next="yes"  style="min-height:370px;background-image:url(image.header.jpg);background-size: 100% 40%;"><!--400 x 85 in corel -->
+		<div class="fh5co-cover fh5co-cover-style-2" data-stellar-background-ratio="0.7" data-next="yes"  style="min-height:370px;background-image:url(image.header.jpg);background-size: 100% 40%;"><!--200 x 43 in corel -->
 			<div class="fh5co-overlay"></div>
 			<div class="fh5co-cover-text">
 
@@ -162,7 +138,7 @@
 
 						<div class="col-md-push-5 col-md-12">
 							<div class="fh5co-cover-intro" style="margin-bottom:100px">
-								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="font-size:40px;margin-top:230px">Use Of Pickle to Store and Retrive data</h1>
+								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="font-size:40px;margin-top:230px">Image Classification</h1>
 							</div>
 						</div>
 					</div>
@@ -398,8 +374,8 @@
 	*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 	
 	var disqus_config = function () {
-	this.page.url = 'https://jay-chakalasiya.github.io/micro-posts/Use%20of%20Pickle/index.html' // Replace PAGE_URL with your page's canonical URL variable
-	this.page.identifier = 'micro-posts/Use%20of%20Pickle'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+	this.page.url = 'https://jay-chakalasiya.github.io/projects/Image%20Classification/index.html' // Replace PAGE_URL with your page's canonical URL variable
+	this.page.identifier = 'projectss/Image%20Classification'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 	};
 	
 	(function() { // DON'T EDIT BELOW THIS LINE
@@ -486,29 +462,6 @@
 
 	<script src="../../js/main.js"></script>
 
-  <!--<script src="js/jquery.min.js"></script>
-
-	<script src="js/jquery.easing.1.3.js"></script>
-
-	<script src="js/bootstrap.min.js"></script>
-
-   <script src="js/jquery.waypoints.min.js"></script>
-
-	<script src="js/owl.carousel.min.js"></script>
-
-	<script src="js/jquery.magnific-popup.min.js"></script>
-
-	<script src="js/jquery.stellar.min.js"></script>
-
-	<script src="js/jquery.countTo.js"></script>
-
-	<script src="js/wow.min.js"></script>
-	<script>
-		new WOW().init();
-	</script>
-
-	<script src="js/main.js"></script>
--->
 
 	</body>
 </html>
