--- a/projects/Image Classification/index.html
+++ b/projects/Image Classification/index.html
@@ -886,7 +886,7 @@ So now we are using pre filtered dataset of cifar-10 for our experiment, downloa
 
 <div class="container">
 <p style="font-size:15px; text-align:justify">
-<center><img src="classes.jpg" width=60%></img></center>
+<center><img src="classes.JPG" width=80%></img></center>
 	Now we have class values, and dataset ready, we are now going to train our algorithm, but before doing that, for satrters I prefer to use gray scale images for simplicity, and we still got results as this is comparitively simple dataset. so let's convert RGB to Gray scale, but before that we have differentiate the R, G abd B elements.
 </p>
 </div>
@@ -1471,9 +1471,9 @@ Training Step: 2346  | total loss: <span class="ansi-green-intense-fg ansi-bold"
 <div class="container">
 <p style="font-size:15px; text-align:justify">
 Accuracy Graph for training set : <br>
-<center><img src="RNN-Tensorboard-Accuracy.jpg" width=80%></img></center>
+<center><img src="RNN-Tensorboard-Accuracy.JPG" width=100%></img></center>
 Loss Graph for training set : <br>
-<center><img src="RNN-Tensorboard-Loss.jpg" width=80%></img></center>
+<center><img src="RNN-Tensorboard-Loss.JPG" width=100%></img></center>
 
 <br>
 There are many grapha to see as well, as you can see that the accuracy is increasing at lower rate but loss is still fluctuating, as i said before decrement of loss suggests the efficient network, so you can experiment wirh same network for more layers or more epochs may be.
@@ -1649,8 +1649,8 @@ If you have any query or doubts just go below or click <a href="#Comments">here<
 	Let's have look at graphs
 	<br>
 	<ul><li><font color=black>Orange : </font>Convolution Network</li><li><font color=black>Blue : </font>LSTM Network</li></ul>
-	<center><img src="CNN-RNN-Tensorboard-Accuracy.jpg" width=80%></img></center>
-	<center><img src="CNN-RNN-Tensorboard-Loss.jpg" width=80%></img></center>
+	<center><img src="CNN-RNN-Tensorboard-Accuracy.JPG" width=100%></img></center>
+	<center><img src="CNN-RNN-Tensorboard-Loss.JPG" width=100%></img></center>
 	<br>
 	Our CNN network beats the LSTM by very high value, but this results are till 3-epochs, and Accuracy is about 55%, and loss is quite less as compare to LSTM, which is very good thing.
 	
@@ -1662,7 +1662,7 @@ If you have any query or doubts just go below or click <a href="#Comments">here<
 	Accuracy after 9th epoch
 	<br>
 	<table>
-	<tr><td><img src="CNN-Accuracy.jpg" width=80%></img></td><td><img src="CNN-Loss.jpg" width=80%></img></td></tr>
+	<tr><td><img src="CNN-Accuracy.JPG" width=80%></img></td><td><img src="CNN-Loss.JPG" width=80%></img></td></tr>
 	</table>
 	If you have any doubts just write it <a href="#Comments">here</a>.
 	
