--- a/projects/Image Classification/index.html
+++ b/projects/Image Classification/index.html
@@ -985,7 +985,7 @@ So now we are using pre filtered dataset of cifar-10 for our experiment, downloa
 	<p style="font-size:15px; text-align:justify">
 	Now consider a huge network of this neurons containing several thousand or even million neurons, connected to each other, may be some neurons not connected to all of them, Pretty hard to manage and even think or visualize so we use the concept of layers for simplicity.
 	</p>
-	<center><img src="ANN.jpg"></center>
+	<center><img src="ANN.jpg" width=70%></center>
 	<p style="font-size:15px; text-align:justify">
 	Each dot in image is representing a Neuron, Here we define several layers like one input layer, one outpit layer and hidden layers which lies b/w input and output layers is ranging in number as per requirement.
 	<br>
